Closed Bug 1186946 Opened 9 years ago Closed 9 years ago

Warn on history service call failure in nsPermissionManager migrations

Categories

(Core :: Permission Manager, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: nika, Assigned: nika)

Details

Attachments

(1 file)

      No description provided.
I figure we can land this at the same time we land the other permission manager bugs, and it feels more correct to have these warnings.
Attachment #8637975 - Flags: review?(ehsan)
Attachment #8637975 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/3e5260eb5db7
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: