Bug 1186946 - Warn on history service call failure in nsPermissionManager migrations